<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.myapplication.MainActivity">


    <EditText
        android:id="@+id/message_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/message"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:maxLines="1"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/send_value"
        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/message_edit_text"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:textColor="@color/textColor"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:visibility="visible"/>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/options"
        android:layout_toLeftOf="@+id/button"
        android:layout_alignParentBottom="true" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chooser"
        android:layout_above="@id/button"
        android:layout_centerHorizontal="true"
        android:visibility="invisible">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bigFont"
            android:textSize="@dimen/BigTextSize"
            android:text="@string/big_font_size"
            android:checked="true"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mediumFont"
            android:textSize="@dimen/MediumTextSize"
            android:text="@string/medium_font_size"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/smallFont"
            android:textSize="@dimen/SmallTextSize"
            android:text="@string/small_font_size"/>
    </RadioGroup>

</RelativeLayout>
